Add specialist profiles to index.html
Added detailed profiles for various specialists including their roles, professional backgrounds, behavioral profiles, interpersonal observations, interview excerpts, catastrophic event suitability, and executive recommendations.

--- a/index.html
+++ b/index.html
@@ -310,6 +310,162 @@ Retain protocol authority. Assign parallel ethical observer to mitigate tunnel v
 </div>
 `,
 
+"Dr. Caelis Viremont": `
+<div class="section">
+<div class="label">Role & Clearance</div>
+Crystal Harmonics Theorist – Level II
+</div>
+
+<div class="section">
+<div class="label">Professional Background</div>
+Specialist in arcane resonance modeling and harmonic cascade detection. Published controversial thesis on “Emotional Frequency Interference in Soul-Bound Constructs.”
+</div>
+
+<div class="section">
+<div class="label">Behavioral Profile</div>
+Heightened neural response to resonance fluctuations. Reports “tone shifts” prior to measurable destabilization. Sleep disturbances recorded after extended MXD-34 chamber exposure.
+</div>
+
+<div class="section">
+<div class="label">Interpersonal Observations</div>
+Increasing anthropomorphic references to harmonic fields. Avoids prolonged silence in core chamber.
+</div>
+
+<div class="section">
+<div class="label">Interview Excerpt</div>
+“It doesn’t break randomly. It changes key.”
+</div>
+
+<div class="section">
+<div class="label">Catastrophic Event Suitability</div>
+Early Detection Reliability: High<br>
+Emotional Resilience Under Collapse: Moderate<br>
+Panic Probability During Harmonic Rupture: Moderate
+</div>
+
+<div class="section">
+<div class="label">Executive Recommendation</div>
+Limit prolonged exposure during peak instability.
+</div>
+`,
+
+"Architect Lysa Dathren": `
+<div class="section">
+<div class="label">Role & Clearance</div>
+AKS Structural Architect – Level III
+</div>
+
+<div class="section">
+<div class="label">Professional Background</div>
+Lead designer in reinforced arcane exo-armor architecture. Known for pioneering stress-channel reinforcement systems capable of redistributing emotional surges into structural output.
+</div>
+
+<div class="section">
+<div class="label">Behavioral Profile</div>
+Demonstrates identity entanglement with AKS durability metrics. Frames suffering as structural stress refinement. Defensive when ethical design criticisms are raised.
+</div>
+
+<div class="section">
+<div class="label">Interpersonal Observations</div>
+Shows pride in armor resilience statistics. Frequently describes Subject survival capacity in mechanical terms.
+</div>
+
+<div class="section">
+<div class="label">Interview Excerpt</div>
+“Pressure makes the structure honest.”
+</div>
+
+<div class="section">
+<div class="label">Catastrophic Event Suitability</div>
+Structural Prediction Accuracy: High<br>
+Ethical Resistance to Activation: Low<br>
+Armor Preservation Priority: Absolute
+</div>
+
+<div class="section">
+<div class="label">Executive Recommendation</div>
+Retain. Avoid direct confrontation regarding moral implications of reinforcement systems.
+</div>
+`,
+
+"Archivist Rowan Mirth": `
+<div class="section">
+<div class="label">Role & Clearance</div>
+Classified Data Archivist – Level IV
+</div>
+
+<div class="section">
+<div class="label">Professional Background</div>
+Archivist Mirth maintains executive-level documentation, including override chains and transfer authorization records. Demonstrates near-perfect recall accuracy.
+</div>
+
+<div class="section">
+<div class="label">Behavioral Profile</div>
+Elevated anxiety markers when reviewing Red Protocol activation logs. Hesitation detected during executive signatory cross-referencing.
+</div>
+
+<div class="section">
+<div class="label">Interpersonal Observations</div>
+Polite and reserved. Displays moral distress when documenting irreversible procedures.
+</div>
+
+<div class="section">
+<div class="label">Interview Excerpt</div>
+“The system works as designed. That doesn’t mean it should.”
+</div>
+
+<div class="section">
+<div class="label">Catastrophic Event Suitability</div>
+Information Preservation: Absolute<br>
+Override Resistance: Low<br>
+Moral Conflict Index: High
+</div>
+
+<div class="section">
+<div class="label">Executive Recommendation</div>
+Increase audit oversight. Do not remove from post.
+</div>
+`,
+
+"Dr. Verin Kael": `
+<div class="section">
+<div class="label">Role & Clearance</div>
+Emotional Conditioning Specialist – Level IV
+</div>
+
+<div class="section">
+<div class="label">Professional Background</div>
+Expert in behavioral leverage architecture. Designed emotional trigger systems integrated into stabilization protocols.
+</div>
+
+<div class="section">
+<div class="label">Behavioral Profile</div>
+Reframes coercion as optimization. Displays minimal physiological response when reviewing destabilization-trigger scripts.
+</div>
+
+<div class="section">
+<div class="label">Interpersonal Observations</div>
+Charismatic and persuasive. Subtle superiority bias noted in peer evaluations.
+</div>
+
+<div class="section">
+<div class="label">Interview Excerpt</div>
+“Attachment is simply a control vector.”
+</div>
+
+<div class="section">
+<div class="label">Catastrophic Event Suitability</div>
+Emotional Detachment: High<br>
+Manipulation Confidence: Extreme<br>
+Override Compliance: Absolute
+</div>
+
+<div class="section">
+<div class="label">Executive Recommendation</div>
+Retain. Monitor influence expansion beyond assigned parameters.
+</div>
+`,
+
 };
 
 const select = document.getElementById("fileSelect");
