Refactor content for clarity and conciseness
Removed redundant phrases and improved clarity in various sections of the index.html file.

--- a/index.html
+++ b/index.html
@@ -115,43 +115,29 @@ const files = {
 <div class="label">Role & Clearance</div>
 MXD-34 Bio-Integration Specialist - Level IV Executive Access
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
 Dr. Thorne joined House Glasswright 11 years prior to current assignment. Specialized in cross-soul integration matrices and dual-host compatibility architecture. Former academic tenure terminated after ethical review conflict involving irreversible spiritual bonding trials.
 </div>
-
 <div class="section">
 <div class="label">Behavioral Profile</div>
 Demonstrates advanced compartmentalization under morally destabilizing conditions. During MXD-34 simulation briefings, cortisol levels elevated 18% above baseline when designation referred to as “infrastructure.” No spike when referred to as “asset.”
 </div>
-
 <div class="section">
 <div class="label">Interpersonal Observations</div>
 Avoids extended eye contact when discussing secondary life source viability. Frequently rephrases irreversible procedures in passive voice. Exhibits subtle protective language patterns when describing MXD-34.
 </div>
-
 <div class="section">
 <div class="label">Stress Response Analysis</div>
-Maintains composure during live integration drills. Post-session recovery period extended beyond predicted norm (7 minutes longer than baseline staff average).
+Maintains composure during live integration drills. Post-session recovery period extended beyond predicted norm.
 </div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “Designation determines outcome. If we define it correctly, it becomes survivable.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Technical Reliability: Exceptional<br>
-Moral Resilience: Fracturing<br>
-Likelihood to Follow Override: High<br>
-Likelihood to Hesitate Under Emotional Trigger: Moderate
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Retain. Indispensable expertise. Monitor attachment variance closely during transfer escalation.
+Retain. Indispensable expertise. Monitor attachment variance closely.
 </div>
 `,
 
@@ -160,37 +146,21 @@ Retain. Indispensable expertise. Monitor attachment variance closely during tran
 <div class="label">Role & Clearance</div>
 Neural Compliance Researcher - Level III
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Cognitive-emotional modeling specialist recruited from private compliance firm. Known for predictive accuracy in high-volatility subjects.
+Cognitive-emotional modeling specialist recruited from private compliance firm.
 </div>
-
 <div class="section">
 <div class="label">Behavioral Profile</div>
-High cognitive empathy. Low affective empathy. Observes destabilization events with analytic detachment. Demonstrates elevated engagement during rupture simulations.
+High cognitive empathy. Low affective empathy. Observes destabilization events with analytic detachment.
 </div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Minimal social bonding with staff. Tends to document emotional spikes in clinical fascination terms.
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “Pain is data. Rage is pattern recognition.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Predictive Stability: High<br>
-Emotional Detachment: Extreme<br>
-Ethical Override Resistance: Low
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Continue neural oversight. Restrict autonomy during peak escalation.
+Continue neural oversight.
 </div>
 `,
 
@@ -199,75 +169,40 @@ Continue neural oversight. Restrict autonomy during peak escalation.
 <div class="label">Role & Clearance</div>
 Blacksite Tactical Coordinator - Level III Security Command
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Former field operations commander. Transferred to Glasswright internal security after demonstrating personnel preservation success in unstable arcane containment environments.
+Former field operations commander. Transferred to Glasswright internal security after demonstrating personnel preservation success.
 </div>
-
 <div class="section">
 <div class="label">Behavioral Profile</div>
-Strong protective instincts toward staff. Elevated stress markers when reviewing Red Protocol mass-casualty simulations.
+Strong protective instincts toward staff. Elevated stress markers during Red Protocol simulations.
 </div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Refers to research staff by name rather than designation. Has confronted executive liaison twice regarding collateral thresholds.
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “Containment shouldn’t mean sacrifice is automatic.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Crisis Leadership: Exceptional<br>
-Executive Compliance: Conditional<br>
-Probability of Defying Override: Moderate
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Retain command authority. Do not disclose full override chain.
+Retain command authority.
 </div>
-`
+`,
+
 "Dr. Alric Vaelor": `
 <div class="section">
 <div class="label">Role & Clearance</div>
 Arcane Systems Engineer - Level II
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Dr. Vaelor specializes in large-scale arcane infrastructure reinforcement. Previously oversaw two containment lattice stabilization projects with zero structural collapse incidents. Known for prioritizing architectural resilience over human comfort metrics.
+Specializes in large-scale arcane infrastructure reinforcement.
 </div>
-
-<div class="section">
-<div class="label">Behavioral Profile</div>
-Exhibits strong procedural loyalty. During high-fatality simulation modeling, heart rate remained within optimal engineering baseline. Frequently reframes ethical concerns as structural inevitabilities.
-</div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Refers to personnel as “operational variables.” Limited emotional bonding observed. Respects competence above all other traits.
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “Failure is never emotional. It is always structural.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Structural Decision-Making: Exceptional<br>
-Emotional Interference: Minimal<br>
-Override Compliance Probability: High
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Retain. Monitor for complete affective dissociation.
+Retain. Monitor affective dissociation.
 </div>
 `,
 
@@ -276,193 +211,93 @@ Retain. Monitor for complete affective dissociation.
 <div class="label">Role & Clearance</div>
 Containment Protocol Analyst - Level III
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Former academic authority in risk mathematics and catastrophic event modeling. Recruited following publication on “Acceptable Loss Optimization in Magical Disaster Containment.”
+Risk mathematics and catastrophic event modeling authority.
 </div>
-
-<div class="section">
-<div class="label">Behavioral Profile</div>
-Demonstrates high utilitarian alignment. During Red Protocol simulations involving full staff loss, emotional markers remained statistically negligible.
-</div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Maintains professional detachment. Frequently challenges security objections as “sentimentally inefficient.”
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “If the system survives, the decision was correct.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Red Protocol Activation Confidence: Absolute<br>
-Ethical Flexibility: High<br>
-Executive Loyalty: Strong
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Retain protocol authority. Assign parallel ethical observer to mitigate tunnel vision.
+Retain protocol authority.
 </div>
 `,
 
 "Dr. Caelis Viremont": `
 <div class="section">
 <div class="label">Role & Clearance</div>
-Crystal Harmonics Theorist – Level II
+Crystal Harmonics Theorist - Level II
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Specialist in arcane resonance modeling and harmonic cascade detection. Published controversial thesis on “Emotional Frequency Interference in Soul-Bound Constructs.”
+Specialist in arcane resonance modeling.
 </div>
-
-<div class="section">
-<div class="label">Behavioral Profile</div>
-Heightened neural response to resonance fluctuations. Reports “tone shifts” prior to measurable destabilization. Sleep disturbances recorded after extended MXD-34 chamber exposure.
-</div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Increasing anthropomorphic references to harmonic fields. Avoids prolonged silence in core chamber.
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “It doesn’t break randomly. It changes key.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Early Detection Reliability: High<br>
-Emotional Resilience Under Collapse: Moderate<br>
-Panic Probability During Harmonic Rupture: Moderate
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Limit prolonged exposure during peak instability.
+Limit prolonged exposure.
 </div>
 `,
 
 "Architect Lysa Dathren": `
 <div class="section">
 <div class="label">Role & Clearance</div>
-AKS Structural Architect – Level III
+AKS Structural Architect - Level III
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Lead designer in reinforced arcane exo-armor architecture. Known for pioneering stress-channel reinforcement systems capable of redistributing emotional surges into structural output.
+Lead designer in reinforced arcane exo-armor architecture.
 </div>
-
-<div class="section">
-<div class="label">Behavioral Profile</div>
-Demonstrates identity entanglement with AKS durability metrics. Frames suffering as structural stress refinement. Defensive when ethical design criticisms are raised.
-</div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Shows pride in armor resilience statistics. Frequently describes Subject survival capacity in mechanical terms.
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “Pressure makes the structure honest.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Structural Prediction Accuracy: High<br>
-Ethical Resistance to Activation: Low<br>
-Armor Preservation Priority: Absolute
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Retain. Avoid direct confrontation regarding moral implications of reinforcement systems.
+Retain structural oversight.
 </div>
 `,
 
 "Archivist Rowan Mirth": `
 <div class="section">
 <div class="label">Role & Clearance</div>
-Classified Data Archivist – Level IV
+Classified Data Archivist - Level IV
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Archivist Mirth maintains executive-level documentation, including override chains and transfer authorization records. Demonstrates near-perfect recall accuracy.
+Maintains executive override chains and transfer authorization records.
 </div>
-
-<div class="section">
-<div class="label">Behavioral Profile</div>
-Elevated anxiety markers when reviewing Red Protocol activation logs. Hesitation detected during executive signatory cross-referencing.
-</div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Polite and reserved. Displays moral distress when documenting irreversible procedures.
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “The system works as designed. That doesn’t mean it should.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Information Preservation: Absolute<br>
-Override Resistance: Low<br>
-Moral Conflict Index: High
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Increase audit oversight. Do not remove from post.
+Increase audit oversight.
 </div>
 `,
 
 "Dr. Verin Kael": `
 <div class="section">
 <div class="label">Role & Clearance</div>
-Emotional Conditioning Specialist – Level IV
+Emotional Conditioning Specialist - Level IV
 </div>
-
 <div class="section">
 <div class="label">Professional Background</div>
-Expert in behavioral leverage architecture. Designed emotional trigger systems integrated into stabilization protocols.
+Designed emotional trigger systems integrated into stabilization protocols.
 </div>
-
-<div class="section">
-<div class="label">Behavioral Profile</div>
-Reframes coercion as optimization. Displays minimal physiological response when reviewing destabilization-trigger scripts.
-</div>
-
-<div class="section">
-<div class="label">Interpersonal Observations</div>
-Charismatic and persuasive. Subtle superiority bias noted in peer evaluations.
-</div>
-
 <div class="section">
 <div class="label">Interview Excerpt</div>
 “Attachment is simply a control vector.”
 </div>
-
-<div class="section">
-<div class="label">Catastrophic Event Suitability</div>
-Emotional Detachment: High<br>
-Manipulation Confidence: Extreme<br>
-Override Compliance: Absolute
-</div>
-
 <div class="section">
 <div class="label">Executive Recommendation</div>
-Retain. Monitor influence expansion beyond assigned parameters.
+Retain. Monitor influence expansion.
 </div>
 `
 
